--- a/variables.scss
+++ b/variables.scss
@@ -1,17 +1,11 @@
-//GLOBALES
-
-$background-color: #fee2e2;
-
 //PALETA DE COLORES
+
 $blanco: #ffff;
 $negro: rgba(0, 0, 0, 0.067);
-
 $gris-claro: #dad6ca;
-$celeste: #22c7e8;
-$celeste-dark: #1a97b0;
-$celeste-2: #4f8699;
-$celeste-2-dark: #3e6876;
-$violeta :#6a5e72;
-$violeta-2: #563444;
-$violeta-2-dark: #452f39;
-$violeta: #e4c2c2;
+
+$rojo-light: #E95670;
+$rojo-dark: #B34270;
+$violeta-light: #713770;
+$violeta-dark: #432F70;
+
